fix: prefix the observer row with the Observer label #207

--- a/apollo/frontend/templates/frontend/submission_edit.html
+++ b/apollo/frontend/templates/frontend/submission_edit.html
@@ -20,7 +20,7 @@
 <table class="table table-bordered">
 {%- if form.form_type == 'CHECKLIST' -%}
 <tr>
-  <th width="15%">&nbsp;</th>
+  <th width="15%">{{ _('Observer') }}</th>
   <th>{{ _('Observer %(index)s', index=1) }}</th>
   {%- for sib in siblings -%}
   <th>{{ _('Observer %(index)s', index=loop.index + 1) }}</th>
