narrow configuration to locations dropdown

--- a/apollo/frontend/templates/frontend/macros/submission_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_filter.html
@@ -10,7 +10,7 @@
                     {{ filter_form.sample(class_='form-control custom-select') }}
                 </div>
                 <div class="col-md-6 mb-2">
-                    {{ filter_form.location(class_='form-control select2') }}
+                    {{ filter_form.location(class_='form-control select2 select2-locations') }}
                 </div>
                 <div class="col-md-2 mb-2 d-flex">
                     <div class="d-flex align-items-center">
