--- a/apollo/frontend/templates/frontend/submission_list.html
+++ b/apollo/frontend/templates/frontend/submission_list.html
@@ -12,7 +12,7 @@ $(function () {
 		$form.find(':input').not('button').each(function() { $(this).val(''); })
 		$form.submit();
 	});
-	$('select.select2').select2(LocationOptions);
+	$('select.select2-locations').select2(LocationOptions);
 });
 </script>
 {% if perms.send_messages.can() %}
@@ -63,7 +63,7 @@ $(function () {
 
 <div class="table-responsive-md mb-n3">
   <table class="table table-sm table-hover">
-    <thead >
+    <thead class="thead-light">
       {{ submission_header(form, form_fields, location_types, perms) }}
     </thead>
     <tbody>
