--- a/apollo/frontend/templates/frontend/dashboard.html
+++ b/apollo/frontend/templates/frontend/dashboard.html
@@ -1,66 +1,61 @@
-{% extends 'frontend/_layout.html' %}
+{% extends 'frontend/layout.html' %}
 {% block stylesheets %}
 <style type="text/css">
 .piechart svg{height:300px; margin-left: .8em; margin-top: .8em;}
 </style>
 {% endblock %}
 {% from 'frontend/macros/dashboard_filter.html' import render_filter_form %}
+{% block content %}
+<div class="row">
+  <div class="col-md-12">
+      {{ render_filter_form(filter_form, location)}}
+  </div>
+</div>
+{% if data %}
+<div class="row">
+{% for row in data %}
+  <div class="col-6 col-sm-4 col-lg-2 mb-2 mt-4">
+  {%- if group -%}
+    <h5 class="text-center">{% if next_location %}<a class="text-decoration-none" href="{{ url_for('dashboard.checklists', form_id=form_id, group=group.slug, locationtype=locationtype, location=row.get('id', ''), **args) }}">{% endif %}{% if row.name|count > 19 %}<abbr title="{{ row.name }}">{{ row.name|truncate(14, True) }}</abbr>{% else %}{{ row.name }}{% endif %}{% if next_location %}</a>{% endif %}</h5>
+  {%- else -%}
+    <h5 class="text-center">{% if not location %}<a class="text-decoration-none" href="{{ url_for('dashboard.checklists', form_id=form_id, group=row.slug, locationtype=locationtype, **args) }}">{% endif %}{% if row.name|count > 19 %}<abbr title="{{ row.name }}">{{ row.name|truncate(14, True) }}</abbr>{% else %}{{ row.name }}{% endif %}{% if not location %}</a>{% endif %}</h5>
+  {% endif %}
+    <div class="piechart text-center" data-chart='{{ row|tojson }}'>
+    </div>
+  </div>
+{% endfor %}
+</div>
+{% else %}
+<div class="card border-light">
+  <div class="card-header text-center">{{ _('No Data Available') }}</div>
+</div>
+{% endif %}
+{% endblock %}
 {% block scripts %}
 <script type="text/javascript" src="{{ url_for('static', filename='js/d3.v3.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='js/filters.js') }}"></script>
 <script type="text/javascript">
   var time = new Date().getTime();
-  
+
   $(document.body).bind("mousemove keypress", function(e) {
     time = new Date().getTime();
   });
 
   function refresh() {
-    if(new Date().getTime() - time >= 300000) 
+    if(new Date().getTime() - time >= 300000)
       window.location.reload(true);
-    else 
+    else
       setTimeout(refresh, 10000);
   }
 </script>
-{% endblock %}
-<div class="container">
-<h3 class="lead h3">
-  {% block title %}{{ page_title }}{% endblock %} · <em class="text-muted">{{ g.event.name }}</em>{% block toolbar %}
-  {% endblock %}
-</h3>
-</div>
-{% block content %}
-<div class="row">
-  <div class="col-md-12">
-      <div class="well well-sm filter">
-          {{ render_filter_form(filter_form, location)}}
-      </div>
-  </div>
-</div>
-{% if data %}
-{% for row in data %}
-{% if loop.index0 is divisibleby 6 %}<div class="row">{% endif %}
-  <div class="col-md-2">
-  {%- if group -%}
-    <legend class="centered">{% if next_location %}<a href="{{ url_for('dashboard.checklists', form_id=form_id, group=group.slug, locationtype=locationtype, location=row.get('id', ''), **args) }}">{% endif %}{{ row.name }}{% if next_location %}</a>{% endif %}</legend>
-  {%- else -%}
-    <legend style="text-align:center">{% if not location %}<a href="{{ url_for('dashboard.checklists', form_id=form_id, group=row.slug, locationtype=locationtype, **args) }}">{% endif %}{{ row.name }}{% if not location %}</a>{% endif %}</legend>
-  {% endif %}
-    <div class="piechart" data-chart='{{ row|tojson }}'>
-    </div>
-  </div>
-{% if loop.last or loop.index is divisibleby 6 %}</div>{% endif %}
-{% endfor %}
-{% else %}
-<div class="row">
-  <div class="col-md-12">
-  <table width="100%" class="table table-striped table-bordered">
-    <tr class="warning">
-      <td style="text-align:center">{{ _('No Data Available') }}</td>
-    </tr>
-  </table>
-  </div>
-</div>
-{% endif %}
+<script type="text/javascript">
+$(function () {
+	$('#filter_reset').on('click', function() {
+		var $form = $(this).parents('form').first();
+		$form.find(':input').not('button').each(function() { $(this).val(''); })
+		$form.submit();
+	});
+	$('select.select2-locations').select2(LocationOptions);
+});
+</script>
 {% endblock %}
