--- a/apollo/frontend/templates/frontend/macros/dashboard_filter.html
+++ b/apollo/frontend/templates/frontend/macros/dashboard_filter.html
@@ -1,19 +1,22 @@
 {% macro render_filter_form(filter_form, location) %}
-<form class="form-inline" method="GET" accept-charset="utf-8" id="filter">
-<div class="form-group">
-    {{ filter_form.sample(class_='form-control span2 input-sm') }}
+<div class="card border-light bg-light mb-3">
+    <div class="card-header">
+        <form class="mb-n2 ml-n2 mr-n2">
+            <div class="form-row">
+                <div class="col-md-2 mb-2">
+                    {{ filter_form.sample(class_='form-control custom-select') }}
+                </div>
+                <div class="col-md-6 mb-2">
+                    {{ filter_form.location(class_='form-control select2 select2-locations') }}
+                </div>
+                <div class="col-md-2 mb-2">
+                    <div class="d-flex flex-row">
+                        <button class="btn btn-primary mr-2 flex-fill" type="submit">{{ _('Filter') }}</button>
+                        <a class="btn btn-secondary flex-fill" href="#" id="filter_reset">{{ _('Clear') }}</a>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
-<div class="form-group">
-    {{ filter_form.location(class_='select2-container span4 input-xlarge select2 select2-locations', **{'data-name': location.name, 'data-location_type': location.location_type}) }}
-</div>
-<div class="form-group">
-	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> {{ _('Filter') }}</button>
-</div>
-<div class="form-group">
-	<a class="btn btn-default btn-sm" id="filter_reset">{{ _('Reset') }}</a>
-</div>
-<!--<div class="form-group">
-    <input type="checkbox" id="toggle-two" data-onstyle="default" data-offstyle="default"> 
-</div>-->
-</form>
 {% endmacro %}
