fix: added totals to charts legend

--- a/apollo/frontend/templates/frontend/dashboard.html
+++ b/apollo/frontend/templates/frontend/dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'frontend/layout.html' %}
 {% block stylesheets %}
 <style type="text/css">
-.piechart svg{height:300px; margin-left: .8em; margin-top: .8em;}
+.piechart svg{height:300px; margin-top: .8em;}
 </style>
 {% endblock %}
 {% from 'frontend/macros/dashboard_filter.html' import render_filter_form %}
