fix: use i18n for field placeholder

--- a/apollo/frontend/templates/frontend/macros/submission_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_filter.html
@@ -4,7 +4,7 @@
         <form class="mb-n2 ml-n2 mr-n2">
             <div class="form-row">
                 <div class="col-6 col-md-2 mb-2">
-                    {{ filter_form.participant_id(class_='form-control', placeholder='Participant ID') }}
+                    {{ filter_form.participant_id(class_='form-control', placeholder=_('Participant ID')) }}
                 </div>
                 <div class="col-6 col-md-2 mb-2">
                     {{ filter_form.sample(class_='form-control custom-select') }}
