--- a/apollo/frontend/templates/frontend/macros/participant_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/participant_list_filter.html
@@ -27,7 +27,7 @@
                     {{ form.partner(class_='form-control custom-select') }}
                 </div>
                 <div class="col-md-2 mb-2">
-                    {{ form.group(class_='form-control custom-select', placeholder=_('All Groups')) }}
+                    {{ form.group(class_='form-control select2', placeholder=_('All Groups')) }}
                 </div>
                 <div class="col-md-2 mb-2">
                     <div class="d-flex flex-row">
