--- a/apollo/frontend/templates/frontend/participant_list.html
+++ b/apollo/frontend/templates/frontend/participant_list.html
@@ -360,6 +360,10 @@ $(function(){
     });
 
     $('select.select2-locations').select2(LocationOptions);
+    $('#group.select2').select2({
+      theme: 'bootstrap4',
+      placeholder: "{{ _('All Groups') }}"
+    });
 });
 </script>
 
